# citi_challenge

./: Dockerfile  README.md  entrypoint.sh  pyproject.toml  requeriments.txt  requirements.txt
citibeats_challenge/: manage.py  pytest.ini
citibeats_challenge/api/: serializers.py  urls.py  views.py
citibeats_challenge/citibeats_challenge/: asgi.py  settings.py  urls.py  wsgi.py
citibeats_challenge/citibeats_challenge/static/admin/css/: autocomplete.css  base.css  changelists.css  dashboard.css  fonts.css  forms.css  login.css  nav_sidebar.css  responsive.css  responsive_rtl.css  rtl.css  widgets.css
citibeats_challenge/citibeats_challenge/static/admin/fonts/: LICENSE.txt  README.txt
citibeats_challenge/citibeats_challenge/static/admin/img/: LICENSE  README.txt
citibeats_challenge/citibeats_challenge/static/admin/js/: SelectBox.js  SelectFilter2.js  actions.js  autocomplete.js  calendar.js  cancel.js  change_form.js  collapse.js  core.js  inlines.js  jquery.init.js  nav_sidebar.js  popup_response.js  prepopulate.js  prepopulate_init.js  urlify.js
citibeats_challenge/common/: lang.py
citibeats_challenge/const/: tokenizer.py
citibeats_challenge/nlp_core/: exceptions.py  tokenize_text.py
citibeats_challenge/tests/nlp_core/: test_tokenize_text.py
citibeats_challenge/tests/test_api/: test_tokenize.py
citibeats_challenge/tests/test_nlp_core/: test_tokenize_text.py
citibeats_challenge/tests/tests_api/: test_tokenize.py
citibeats_challenge/tests/tests_nlp/: test_tokenize_text.py
nlp_core/: tokenize_text.py
(+23 files in other folders)
